# mcp-auth

./: Dockerfile  README.md  openapi.yaml  pyproject.toml
app/: __init__.py  main.py
app/api/: __init__.py
app/core/: config.py
app/db/: __init__.py
app/models/: __init__.py  protected_resource_metadata.py
docs/: authorization-flow.md  dynamic-client-registration.md  oauth-2-1.md  pkce.md  proof-key-for-code-exchange.md
tasks/: README.md  generate-json-web-key-sets.md  handle-resource-indicators-provided-by-chatgpt.md  handle-resource-indicators-provided-by-mcp-client.md  host-authorization-server-metadata-on-authorization-server.md  host-protected-resource-metadata-on-mcp-server.md  implement-authorization-callback-endpoint-in-authorization-server.md  implement-authorization-code-protection-(pkce).md  implement-authorization-code-protection.md  implement-authorization-endpoint-in-authorization-server.md  implement-dynamic-client-registration-dcr-in-authorization-server.md  implement-token-endpoint-in-authorization-server.md  implement-token-introspection-endpoint-in-authorization-server.md  implement-token-refresh-in-authorization-server.md  implement-token-revocation-endpoint-in-authorization-server.md  implement-userinfo-endpoint-in-authorization-server.md  protected-mcp-endpoints-should-return-401-unauthorized-for-unauthorized-requests.md  validate-access-token-in-requests-to-mcp-server.md
tests/: conftest.py  test_main.py
tf/: .gitignore  .terraform.lock.hcl  api_gateway.tf  cloud_run.tf  load_balancer.tf  main.tf  openapi.yaml  outputs.tf  variables.tf
(+10 files in other folders)
