[tool.poetry]
name = "mcp-auth"
version = "0.1.0"
description = "A custom authorization implementation that conforms to the Model Context Protocol (MCP) authorization specification."
authors = ["Nickolas Kraus"]
package-mode = false

[tool.poetry.dependencies]
python = ">=3.13,<4.0"
fastapi = {extras = ["standard"], version = "*"}
uvicorn = {extras = ["standard"], version = "*"}
pydantic-settings = "^2.12.0"
authlib = "^1.6.5"
fastmcp = "^2.13.1"

[tool.poetry.group.dev.dependencies]
ruff = "^0.14.3"
pytest = "^9.0.1"
pyright = "^1.1.407"

[tool.ruff.lint]
extend-select = ["I"]

[build-system]
requires = ["poetry-core>=1.5.0"]
build-backend = "poetry.core.masonry.api"
